# stably-discordant-server

./: CHANGELOG.md  Makefile  README.md  config.toml  pyproject.toml
app/: server.py
stably_discordant_server/: config.py  parser.py  server_bot.py  units.py  utils.py
