[tool.poetry]
name = "stably-discordant-server"
version = "0.1.0"
description = ""
authors = ["Dan Kleeman <dan.kleeman.git@pm.me>"]
readme = "README.md"
packages = [{include = "stably_discordant_server"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
